--- a/public/css/coaches.css
+++ b/public/css/coaches.css
@@ -41,16 +41,47 @@ table, th, td {
     font-size: 14pt;
 }
 h1 {
+	font-family: "Questrial", sans-serif;
 	font-size: 28pt;
 	color: #2de2f3;
 	text-align: center;
+	padding-top: 28px;
+
 }
 
 h2 {
+	font-family: "Questrial", sans-serif;
 	padding-top: 32px;
 	font-size: 18pt;
 	color: #2de2f3;
 	text-align: center;
+}
+
+h3 {
+	font-family: "Questrial", sans-serif;
+	color: #2de2f3;
+	text-align: center;
+	margin-bottom: 24pt;
+}
+
+h4 {
+	font-family: "Questrial", sans-serif;
+	color: #2de2f3;
+	text-align: left;
+	margin-bottom: 24pt;
+	margin-left: 12pt;
+	margin-top: 24pt;
+}
+
+h5 {
+	font-family: "Questrial", sans-serif;
+	color: white;
+	text-align: center;
+}
+
+.coach-responses {
+	margin-left: 12pt;
+	font-size: 12pt;
 }
 
 p {
@@ -58,4 +89,36 @@ p {
     min-width: 100%;
     font-family: "Questrial", sans-serif;
     font-size: 14pt;
+}
+
+#coachpic {
+	text-align: center;
+	border-radius: 50%;
+	margin-top: 16pt;
+	outline: none;
+    border-color: #2de2f3;
+    box-shadow: 0 0 50px #2de2f3;
+    max-width: 250px;
+}
+
+#seasons-table {
+	outline: none;
+    border-color: #2de2f3;
+    box-shadow: 0 0 50px #2de2f3;
+}
+
+.modal-content{
+	background-color: black;
+	outline: none;
+    border-color: #2de2f3;
+    box-shadow: 0 0 50px #2de2f3;
+}
+
+footer {  
+   left:0px;
+   bottom:0px;
+   width:100%;
+   text-align: center;
+   font-family: 'Questrial', sans-serif;
+   padding-top: 64px;
 }
