--- a/public/css/coaches.css
+++ b/public/css/coaches.css
@@ -114,6 +114,19 @@ p {
     box-shadow: 0 0 50px #2de2f3;
 }
 
+#coach-interview-btn{
+ 	border:none;
+    text-decoration:none;
+    text-align:center;
+    margin-left: 43%;
+}
+
+#btn-row {
+ 	text-align: center;
+ 	min-width: 100%;
+}
+
+
 footer {  
    left:0px;
    bottom:0px;
