--- a/public/css/hall-of-fame.css
+++ b/public/css/hall-of-fame.css
@@ -25,7 +25,32 @@
 	max-width: 90px;
 
 }
+#navpic:hover{
+	background-color: transparent;
+	outline: none;
+    border-color: #2de2f3;
+    border: 0 0 0 0;
+    box-shadow: 0 0 100px #2de2f3;
+}
+
 
 #navpills {
 	float: right;
+}
+
+li:hover{
+	background-color: transparent;
+	outline: none;
+    border-color: #2de2f3;
+    border: 0 0 0 0;
+    box-shadow: 0 0 100px #2de2f3;
+}
+
+footer {  
+   left:0px;
+   bottom:0px;
+   width:100%;
+   text-align: center;
+   font-family: 'Questrial', sans-serif;
+   padding-top: 64px;
 }
