--- a/public/css/history.css
+++ b/public/css/history.css
@@ -25,7 +25,6 @@
 	max-width: 90px;
 
 }
-
 #navpic:hover{
 	background-color: transparent;
 	outline: none;
@@ -47,6 +46,46 @@ li:hover{
     box-shadow: 0 0 100px #2de2f3;
 }
 
+
+table, th, td {
+    border: 1px solid gray;
+    border-collapse: collapse;
+    padding: 15px;
+    text-align: center;
+    color: white;
+    min-width: 100%;
+    font-family: "Questrial", sans-serif;
+    font-size: 14pt;
+}
+h1 {
+	font-family: "Questrial", sans-serif;
+	font-size: 28pt;
+	color: #2de2f3;
+	text-align: center;
+	padding-top: 28px;
+
+}
+
+h3 {
+	font-family: "Questrial", sans-serif;
+	color: white;
+	text-align: center;
+	margin-bottom: 24pt;
+}
+
+p {
+	color: white;
+    min-width: 100%;
+    font-family: "Questrial", sans-serif;
+    font-size: 14pt;
+}
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+
 footer {  
    left:0px;
    bottom:0px;
@@ -55,3 +94,4 @@ footer {
    font-family: 'Questrial', sans-serif;
    padding-top: 64px;
 }
+
